Added testng tests for client utilising mockserver

--- a/ncts-syndication-client-library/test-output/old/Default suite/classes.html
+++ b/ncts-syndication-client-library/test-output/old/Default suite/classes.html
@@ -21,6 +21,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>downloadsFilesFromMultipleCategories</td>
+<td>downloading </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>hashMismatchInSyndicationThrowsException</td>
 <td>downloading </td>
 </tr>
