--- a/ncts-syndication-client-library/test-output/old/Default suite/methods.html
+++ b/ncts-syndication-client-library/test-output/old/Default suite/methods.html
@@ -1,20 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;clientTest.setUpMockServer()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&gt;&gt;setUpMockServer</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;clientTest.setUpMockServer()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&gt;&gt;setUpMockServer</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:03</td>   <td>2011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clientTest.downloadsAllFilesInCategory()[pri:1, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">downloadsAllFilesInCategory</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:32</td>   <td>2013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clientTest.downloadsAllFilesInCategory()[pri:1, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">downloadsAllFilesInCategory</td> 
   <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:03</td>   <td>2459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.deleteAllFilesInClientFolder()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;deleteAllFilesInClientFolder</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.deleteAllFilesInClientFolder()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;deleteAllFilesInClientFolder</td> 
 <td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:03</td>   <td>2465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clientTest.downloadsLatestInCategory()[pri:2, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">downloadsLatestInCategory</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clientTest.downloadsLatestInCategory()[pri:2, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">downloadsLatestInCategory</td> 
   <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:03</td>   <td>2515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.deleteAllFilesInClientFolder()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;deleteAllFilesInClientFolder</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.deleteAllFilesInClientFolder()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;deleteAllFilesInClientFolder</td> 
 <td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:03</td>   <td>2515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clientTest.hashMismatchInSyndicationThrowsException()[pri:3, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">hashMismatchInSyndicationThrowsException</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clientTest.hashMismatchInSyndicationThrowsException()[pri:3, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">hashMismatchInSyndicationThrowsException</td> 
   <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:03</td>   <td>2563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.deleteAllFilesInClientFolder()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;deleteAllFilesInClientFolder</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.deleteAllFilesInClientFolder()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;deleteAllFilesInClientFolder</td> 
 <td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/01 11:22:03</td>   <td>2563</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.tearDownMockServer()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;tearDownMockServer</td> 
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="clientTest.downloadsFilesFromMultipleCategories()[pri:4, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">downloadsFilesFromMultipleCategories</td> 
+  <td>main@691690486</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.deleteAllFilesInClientFolder()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;deleteAllFilesInClientFolder</td> 
+<td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
+<tr bgcolor="dced80">  <td>18/05/01 16:40:33</td>   <td>2732</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;clientTest.tearDownMockServer()[pri:0, instance:com.github.dionmcm.ncts.syndication.client.clientTest@498d318c]">&lt;&lt;tearDownMockServer</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@691690486</td>   <td></td> </tr>
 </table>
