--- a/ncts-syndication-client-library/test-output/emailable-report.html
+++ b/ncts-syndication-client-library/test-output/emailable-report.html
@@ -9,50 +9,20 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">1</td><td class="num">2,882</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">3,067</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.github.dionmcm.ncts.syndication.client.clientTest</td><td><a href="#m0">downloadsLatestInCategory</a></td><td rowspan="1">1525137723853</td><td rowspan="1">48</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.github.dionmcm.ncts.syndication.client.clientTest</td><td><a href="#m1">downloadsAllFilesInCategory</a></td><td rowspan="1">1525137723399</td><td rowspan="1">447</td></tr><tr class="passedeven"><td><a href="#m2">hashMismatchInSyndicationThrowsException</a></td><td rowspan="1">1525137723903</td><td rowspan="1">46</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.github.dionmcm.ncts.syndication.client.clientTest</td><td><a href="#m0">downloadsAllFilesInCategory</a></td><td rowspan="1">1525156832712</td><td rowspan="1">465</td></tr><tr class="passedeven"><td><a href="#m1">downloadsFilesFromMultipleCategories</a></td><td rowspan="1">1525156833290</td><td rowspan="1">138</td></tr><tr class="passedeven"><td><a href="#m2">downloadsLatestInCategory</a></td><td rowspan="1">1525156833183</td><td rowspan="1">49</td></tr><tr class="passedeven"><td><a href="#m3">hashMismatchInSyndicationThrowsException</a></td><td rowspan="1">1525156833234</td><td rowspan="1">53</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.github.dionmcm.ncts.syndication.client.clientTest#downloadsLatestInCategory</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertTrue(Assert.java:44)
-	at org.testng.Assert.assertTrue(Assert.java:54)
-	at com.github.dionmcm.ncts.syndication.client.clientTest.downloadsLatestInCategory(clientTest.java:94)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:580)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:716)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:988)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.github.dionmcm.ncts.syndication.client.clientTest#downloadsAllFilesInCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.github.dionmcm.ncts.syndication.client.clientTest#hashMismatchInSyndicationThrowsException</h3><table class="result"><tr><th>Expected Exception</th></tr><tr><td><div class="stacktrace">com.github.dionmcm.ncts.syndication.client.HashValidationFailureException: File /Users/patrick/git/ncts-syndication-client/ncts-syndication-client-library/src/test/java/com/github/dionmcm/ncts/syndication/client/Test_Client/green1.r2 with hash 63640264849a87c90356129d99ea165e37aa5fabc1fea46906df1a7ca50db492 and length 11 once downloaded did not match the advertised hash thisHashIsIncorrect and/or length 11. Downloaded file deleted, process aborted.
+<h2>Default test</h2><h3 id="m0">com.github.dionmcm.ncts.syndication.client.clientTest#downloadsAllFilesInCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.github.dionmcm.ncts.syndication.client.clientTest#downloadsFilesFromMultipleCategories</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.github.dionmcm.ncts.syndication.client.clientTest#downloadsLatestInCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.github.dionmcm.ncts.syndication.client.clientTest#hashMismatchInSyndicationThrowsException</h3><table class="result"><tr><th>Expected Exception</th></tr><tr><td><div class="stacktrace">com.github.dionmcm.ncts.syndication.client.HashValidationFailureException: File /Users/patrick/git/ncts-syndication-client/ncts-syndication-client-library/src/test/java/com/github/dionmcm/ncts/syndication/client/Test_Client/green1.r2 with hash 63640264849a87c90356129d99ea165e37aa5fabc1fea46906df1a7ca50db492 and length 11 once downloaded did not match the advertised hash thisHashIsIncorrect and/or length 11. Downloaded file deleted, process aborted.
 	at com.github.dionmcm.ncts.syndication.client.NctsFileDownloader.downloadFile(NctsFileDownloader.java:141)
 	at com.github.dionmcm.ncts.syndication.client.NctsFileDownloader.downloadEntry(NctsFileDownloader.java:111)
 	at com.github.dionmcm.ncts.syndication.client.SyndicationClient.download(SyndicationClient.java:96)
 	at com.github.dionmcm.ncts.syndication.client.SyndicationClient.downloadLatestFromCategories(SyndicationClient.java:121)
 	at com.github.dionmcm.ncts.syndication.client.SyndicationClient.downloadLatest(SyndicationClient.java:149)
-	at com.github.dionmcm.ncts.syndication.client.clientTest.hashMismatchInSyndicationThrowsException(clientTest.java:107)
+	at com.github.dionmcm.ncts.syndication.client.clientTest.hashMismatchInSyndicationThrowsException(clientTest.java:121)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
