--- a/ncts-syndication-client-library/test-output/index.html
+++ b/ncts-syndication-client-library/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.github.dionmcm.ncts.syndication.client.clientTest" hash-for-method="downloadsLatestInCategory">downloadsLatestInCategory</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -117,6 +103,16 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.github.dionmcm.ncts.syndication.client.clientTest" hash-for-method="downloadsAllFilesInCategory">downloadsAllFilesInCategory</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.github.dionmcm.ncts.syndication.client.clientTest" hash-for-method="downloadsFilesFromMultipleCategories">downloadsFilesFromMultipleCategories</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.github.dionmcm.ncts.syndication.client.clientTest" hash-for-method="downloadsLatestInCategory">downloadsLatestInCategory</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -136,54 +132,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.github.dionmcm.ncts.syndication.client.clientTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="downloadsLatestInCategory">
-                  </a> <!-- downloadsLatestInCategory -->
-                  <span class="method-name">downloadsLatestInCategory</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertTrue(Assert.java:44)
-	at org.testng.Assert.assertTrue(Assert.java:54)
-	at com.github.dionmcm.ncts.syndication.client.clientTest.downloadsLatestInCategory(clientTest.java:94)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:580)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:716)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:988)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -199,6 +147,20 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="downloadsFilesFromMultipleCategories">
+                  </a> <!-- downloadsFilesFromMultipleCategories -->
+                  <span class="method-name">downloadsFilesFromMultipleCategories</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="downloadsLatestInCategory">
+                  </a> <!-- downloadsLatestInCategory -->
+                  <span class="method-name">downloadsLatestInCategory</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="hashMismatchInSyndicationThrowsException">
                   </a> <!-- hashMismatchInSyndicationThrowsException -->
                   <span class="method-name">hashMismatchInSyndicationThrowsException</span>
@@ -209,7 +171,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/vm/p4t_yt0s4_51q6w17kgdxsq40000gn/T/testng-eclipse--1375840935/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/vm/p4t_yt0s4_51q6w17kgdxsq40000gn/T/testng-eclipse-706371456/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -250,6 +212,10 @@
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
+                <span class="method-in-group-name">downloadsFilesFromMultipleCategories</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
                 <span class="method-in-group-name">downloadsLatestInCategory</span>
                 <br/>
               </div> <!-- method-in-group -->
@@ -274,24 +240,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'downloadsAllFilesInCategory')
 data.setCell(0, 2, 'com.github.dionmcm.ncts.syndication.client.clientTest')
-data.setCell(0, 3, 447);
+data.setCell(0, 3, 465);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'downloadsLatestInCategory')
+data.setCell(1, 1, 'downloadsFilesFromMultipleCategories')
 data.setCell(1, 2, 'com.github.dionmcm.ncts.syndication.client.clientTest')
-data.setCell(1, 3, 48);
+data.setCell(1, 3, 138);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'hashMismatchInSyndicationThrowsException')
 data.setCell(2, 2, 'com.github.dionmcm.ncts.syndication.client.clientTest')
-data.setCell(2, 3, 46);
+data.setCell(2, 3, 53);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'downloadsLatestInCategory')
+data.setCell(3, 2, 'com.github.dionmcm.ncts.syndication.client.clientTest')
+data.setCell(3, 3, 49);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 541 ms</span>
+              <span class="suite-total-time">Total running time: 705 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -324,33 +294,39 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">downloadsAllFilesInCategory</span>
-                <span class="method-start">2015 ms</span>
+                <span class="method-start">2017 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">deleteAllFilesInClientFolder</span>
-                <span class="method-start">2463 ms</span>
+                <span class="method-start">2483 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">downloadsLatestInCategory</span>
-                <span class="method-start">2469 ms</span>
+                <span class="method-start">2488 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">deleteAllFilesInClientFolder</span>
-                <span class="method-start">2519 ms</span>
+                <span class="method-start">2538 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">hashMismatchInSyndicationThrowsException</span>
-                <span class="method-start">2519 ms</span>
+                <span class="method-start">2539 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">deleteAllFilesInClientFolder</span>
-                <span class="method-start">2566 ms</span>
+                <span class="method-start">2594 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">downloadsFilesFromMultipleCategories</span>
+                <span class="method-start">2595 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">deleteAllFilesInClientFolder</span>
+                <span class="method-start">2734 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownMockServer</span>
-                <span class="method-start">2567 ms</span>
+                <span class="method-start">2735 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
